# wxUiTesting

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml  test_clang_format.yml
imports/: pch.h
imports/imports/: Crafter.wxcp  Crafter.wxui  FormBuilder.wxui  README.md  crafter_base.hpp  crafter_bitmaps.cpp  crafter_bitmaps.xrc  import_crafter_base.cpp  import_crafter_base.h  import_form_base.cpp  import_form_base.h
imports/ui/: wxUiTesting.wxui
imports/wxui/: my_images.cpp  my_images.h  wxui_generated.cmake
mdi/: CMakeLists.txt  file_list.cmake  mdi.wxui  run_cpp_build.cmd  run_pytest.cmd  run_ruby_test.cmd  wxui_code.cmake
mdi/cpp/: aui_frame.cpp  aui_frame.h  mainapp.cpp  mainapp.h  mdi_frame.cpp  mdi_frame.h  mdi_test.manifest  mdi_test.rc  normal_frame.cpp  normal_frame.h  pch.h  sdi_frame.cpp  sdi_frame.h
mdi/cpp/classes/: canvas.cpp  canvas.h  doc.h  drawing_document.cpp  drawing_document.h  drawing_view.cpp  drawing_view.h  image_document.cpp  image_document.h  image_view.cpp  image_view.h  text_document.cpp  text_document.h  textctrl_view.cpp  textctrl_view.h  view.h
quick/: CMakeLists.txt  file_list.cmake  main_test.wxui  run_lang_test.cmd
quick/cpp/: main_frame.cpp  main_frame.h  mainapp.cpp  mainapp.h  pch.h  quick_test.rc
quick/lua/: README.md
quick/python/: py_main.py
quick/ruby/: rb_main.rb
sdi/: CMakeLists.txt  COVERAGE.md  SUPPORTED.md  file_list.cmake  run_cpp_build.cmd  run_pytest.cmd  run_ruby_test.cmd  run_test.cmd  sdi32.natvis  sdi_noimage_list.wxui  sdi_test.wxui  wxui_code.cmake
sdi/cpp/: bitmaps_dlg.cpp  bitmaps_dlg.h  booktest_dlg.cpp  booktest_dlg.h  commonctrls.cpp  commonctrls.h  data_dlg.cpp  data_dlg.h  dlgissue_956.cpp  dlgissue_960.cpp  form_aui_toolbar.cpp  form_aui_toolbar.h  form_menu_bar.cpp  form_menu_bar.h  form_ribbonbar_gallery.h  form_ribbonbar_tool.cpp  form_toolbar_base.cpp  images.cpp  images.h  mainframe.cpp  mainframe.h  maintestdialog.cpp  maintestdialog.h  propsheet_base.cpp  propsheet_base.h  python_dlg.cpp  python_dlg.h  sdi32.manifest  sdi32.rc  testformpanel.cpp  testformpanel.h  tools_dlg.cpp  tools_dlg.h  wizard.cpp  wxue_data.cpp  wxue_data.h  xrc_python_dlg.cpp  xrc_python_dlg.h
sdi/cpp/derived_classes/: drv_frame.h  drv_menubar.h  drv_panel.h
sdi/python/: bitmaps_dlg.py  booktest_dlg.py  data_dlg.py  dlgissue_956.py  dlgissue_960.py  images.py  main_test_dlg.py  mainframe.py  popupwin.py  python_dlg.py  testformpanel.py  tools_dlg.py  wizard.py
sdi/ruby/: bitmaps_dlg.rb  booktest_dlg.rb  data_dlg.rb  dlgissue_956.rb  dlgissue_960.rb  images.rb  main_test_dlg.rb  mainframe.rb  propsheet.rb  python_dlg.rb  tools_dlg.rb  wizard.rb
sdi/xrc/: booktest_dlg.xrc  commonctrls.xrc  dlgissue_956.py  dlgissue_960.xrc  main_test_dlg.xrc  mainframe.xrc  python_dlg.xrc  wizard.xrc
sdi33/: CMakeLists.txt  README.md  file_list.cmake  run_test.cmd  sdi33.natvis  sdi33.wxui  wxui_code.cmake  xrc.xrc
sdi33/cpp/: bitmaps_dlg.cpp  bitmaps_dlg_manual.cpp  booktest_dlg.cpp  booktest_dlg.h  commonctrls.cpp  commonctrls.h  data_dlg.cpp  data_dlg.h  dlgissue_956.cpp  dlgissue_956.h  dlgissue_960.cpp  dlgissue_960.h  form_menubar.cpp  form_popup_menu.cpp  form_popup_menu.h  form_ribbonbar_gallery.cpp  form_ribbonbar_tool.h  form_toolbar.cpp  form_toolbar.h  generic_dlg.cpp  generic_dlg.h  images.cpp  mainapp.cpp  mainapp.h  mainframe.cpp  mainframe.h  maintestdialog.cpp  maintestdialog.h  popupwin.cpp  propsheet_base.cpp  python_dlg.cpp  sdi33.manifest  sdi33.rc  testformpanel.cpp  tools_dlg.cpp  tools_dlg.h  wizard.cpp  wizard.h  xrc_python_dlg.cpp
sdi33/cpp/derived_classes/: drv_dialog.h  drv_statusbar.h  drv_toolbar.h  drv_wizard.h
sdi33/python/: bitmaps_dlg.py  booktest_dlg.py  data_dlg.py  generic_dlg.py  main_test_dlg.py  mainframe.py  propsheet.py  python_dlg.py  tools_dlg.py  wizard.py
sdi33/ruby/: bitmaps_dlg.rb  booktest_dlg.rb  data_dlg.rb  dlgissue_956.rb  dlgissue_960.rb  images.rb  main_test_dlg.rb  mainframe.rb  propsheet.rb  python_dlg.rb  test_dlg.rb  tools_dlg.rb  wizard.rb
sdi33/xrc/: booktest_dlg.xrc  commonctrls.xrc  dlgissue_960.xrc  main_test_dlg.xrc  mainframe.xrc  python_dlg.xrc  test_dlg.xrc  testformpanel.xrc  wizard.xrc
sdi_31/: CMakeLists.txt  file_list.cmake  run_cpp_build.cmd  sdi_31.wxui  wxui_code.cmake
sdi_31/cpp/: bitmaps_dlg.cpp  bitmaps_dlg.h  booktest_dlg.cpp  booktest_dlg.h  commonctrls.cpp  commonctrls.h  dlgissue_960.cpp  dlgissue_960.h  form_toolbar_base.cpp  mainframe.cpp  mainframe.h  maintestdialog.cpp  maintestdialog.h  python_dlg.cpp  python_dlg.h  tools_dlg.cpp  tools_dlg.h  wizard.cpp  wizard.h
src/: .srcfiles.yaml  clang_tests.cmd  file_list.cmake  import_test.cpp  mainapp.cpp  pch.h
src/imports/: FormBuilder.fbp  FormBuilder.wxcp  README.md  crafter_base.cpp  form_base.cpp  form_base.h
src/python/: main.py  mainframe.py
src/ui/: commonctrls.cpp  dlgmultitest.cpp  dlgmultitest_base.cpp  dlgmultitest_base.h  form_toolbar.cpp  form_toolbar_base.cpp  import_test_base.cpp  import_test_base.h  mainframe.cpp  mainframe.h  mainframe_base.cpp  mainframe_base.h  other_ctrls.cpp  other_ctrls.h  other_ctrls_base.cpp  popupwin.cpp  python_dlg.cpp  ribbondlg.cpp  ribbondlg.h  ribbondlg_base.cpp  treebook_base.cpp  wizard.cpp  wizard.h  wizard_base.cpp  wxUiTesting.wxui  wxui_code.cmake  wxui_generated.cmake
src/wxui/: choicebook.cpp  choicebook.h  choicebook_base.cpp  choicebook_base.h  commonctrls.cpp  commonctrls_base.cpp  commonctrls_base.h  dlgmultitest.cpp  dlgmultitest_base.cpp  form_toolbar_base.cpp  import_test.cpp  listbook.h  listbook_base.cpp  listbook_base.h  mainframe.cpp  mainframe.h  mainframe_base.cpp  mainframe_base.h  my_images.cpp  (+18 more)
wxWidgets31/: CMakeLists.txt  wxWidgets.cmake
wxWidgets32/: CMakeLists.txt  wxWidgets.cmake  wxWidgetsConfig.cmake
wxWidgets33/: CMakeLists.txt  wxWidgets.cmake
wxWidgets33/samples/: CMakeLists.txt  VSCODE_README.md
wxWidgets33/samples/animate/: anitest.cpp
wxWidgets33/samples/menu/: menu.cpp
wxWidgets33/samples/widgets/: textctrl.cpp
(+44 files in other folders)
